Fix alignment issues

--- a/src/components/Trainer/ClientCard/ClientCard.css
+++ b/src/components/Trainer/ClientCard/ClientCard.css
@@ -11,11 +11,14 @@
   border: 0px;
   color: white;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  height: 330px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .flip-card {
-  background-color: transparent;
+  /* background-color: green; */
   width: 300px;
-  height: 200px;
+  height: 380px;
   /* border: 1px solid #f1f1f1; */
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
 }
